# bip39gen

./: README.md  default.nix  flake.nix  pyproject.toml
nix/: package.nix
src/: main.py
