[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bip39gen"
version = "1.0.0"
description = "Generate BIP-39 mnemonic passphrases"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["mnemonic"]
authors = [{ name = "Nicolas Dumitru", email = "nicolas@ndumitru.com" }]
license = { text = "GPL-3.0-or-later" }

# CLI command
[project.scripts]
bip39gen = "bip39gen.main:main"

# Optional developer dependencies
[project.optional-dependencies]
dev = ["pytest", "black"]

# Tell setuptools where the package lives
[tool.setuptools.packages.find]
where = ["src"]
